changed zone to asia

--- a/create-windows-vm.yaml
+++ b/create-windows-vm.yaml
@@ -5,8 +5,8 @@
       gcp_project: openshift-demo-320707
       gcp_cred_kind: serviceaccount
       gcp_cred_file: "/Users/champillon/SandBox/ansible-playground/gcp-key/openshift-demo-320707-46b48f11b55a.json"
-      zone: "us-central1-a"
-      region: "us-central1"
+      zone: "asia-southeast1-b"
+      region: "asia-southeast1"
       image: "projects/windows-cloud/global/images/windows-server-2016-dc-v20220119"
 
   tasks:
